<resources>
    <string name="app_name">Estoque411</string>
    <string name="crie_sua_conta_gr_tis">Crie sua conta Grátis</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="ja_tenho_cadastro">Ja tenho Cadastro</string>
    <string name="logar">logar</string>
    <string name="email">Email</string>

    <string name="e_mail">E-mail</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="senha">Senha</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="voltar">voltar</string>
    <string name="salvar">salvar</string>
    <string name="ativar_desativar">Ativar/Desativar</string>
    <string name="tipo">Tipo</string>
    <string name="novo_produto">NOVO PRODUTO</string>
    <string name="data_de_vencimento">Data de Vencimento</string>
    <string name="valor_de_venda">Valor de Venda</string>
    <string name="quantidade">Quantidade</string>
    <string name="valor_de_compra">Valor de Compra</string>
    <string name="nome">Nome</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cancelar">CANCELAR</string>
    <string name="nova_venda">Nova Venda</string>
    <string name="name">Name</string>

    <string name="button">Button</string>
    <string name="edi_o">Edição</string>
    <string name="textview">TextView</string>
    <string name="vendas_realizadas">Vendas Realizadas</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="credito">Credito</string>
    <string name="debito">Debito</string>
    <string name="boleto">Boleto</string>

</resources>
