<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbackgroud">

    <TextView
        android:id="@+id/NovoProduto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorbackgroud"
        android:gravity="center"
        android:text="Novo Produto"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nomeProdutoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:background="@drawable/rouded_edit_text"
        android:ems="10"
        android:hint="Nome"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textColorHint="#99424242"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/NovoProduto"
        app:layout_constraintStart_toStartOf="@+id/NovoProduto"
        app:layout_constraintTop_toBottomOf="@+id/NovoProduto" />

    <EditText
        android:id="@+id/valorVendaProdutoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rouded_edit_text"
        android:ems="10"
        android:hint="@string/valor_de_venda"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textColorHint="#99424242"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/nomeProdutoText"
        app:layout_constraintStart_toStartOf="@+id/nomeProdutoText"
        app:layout_constraintTop_toBottomOf="@+id/nomeProdutoText" />

    <EditText
        android:id="@+id/valorCompraProdutoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/rouded_edit_text"
        android:ems="10"
        android:hint="@string/valor_de_compra"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textColorHint="#99424242"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/valorVendaProdutoText"
        app:layout_constraintStart_toStartOf="@+id/valorVendaProdutoText"
        app:layout_constraintTop_toBottomOf="@+id/valorVendaProdutoText" />

    <EditText
        android:id="@+id/quantidadeProdutoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/rouded_edit_text"
        android:ems="10"
        android:hint="Quantidade"
        android:inputType="number"
        android:paddingLeft="10dp"
        android:textColor="#000000"
        android:textColorHint="#99424242"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/valorCompraProdutoText"
        app:layout_constraintStart_toStartOf="@+id/valorCompraProdutoText"
        app:layout_constraintTop_toBottomOf="@+id/valorCompraProdutoText" />

    <Button
        android:id="@+id/cadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/rouded_button"
        android:onClick="validandoInfo"
        android:text="@string/cadastrar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/editData"
        app:layout_constraintStart_toStartOf="@+id/editData"
        app:layout_constraintTop_toBottomOf="@+id/editData" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="36dp"
        android:layout_height="32dp"
        android:onClick="voltar"
        app:layout_constraintBottom_toBottomOf="@+id/NovoProduto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

    <EditText
        android:id="@+id/editData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rouded_edit_text"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/quantidadeProdutoText"
        app:layout_constraintStart_toStartOf="@+id/quantidadeProdutoText"
        app:layout_constraintTop_toBottomOf="@+id/quantidadeProdutoText" />

</androidx.constraintlayout.widget.ConstraintLayout>